# ai-agents-v2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.build-index  README.md  pyproject.toml  run_tests.py
backend/app/: dependencies.py  enums.py  exceptions.py  main.py  models.py  schemas.py
backend/app/agents/: math_agent.py  router_agent.py  utils.py
backend/app/agents/knowledge_agent/: main.py  scraping.py
backend/app/api/v1/: chat.py
backend/app/core/: decorators.py  error_handling.py  llm.py  logging.py  settings.py
backend/app/security/: constants.py  sanitization.py
backend/app/services/: chat_dispatcher.py  llm_client.py  redis_service.py
backend/scripts/: build_index.py
backend/tests/: __init__.py  conftest.py  test_dependencies.py  test_main.py
backend/tests/agents/: __init__.py  test_math_agent.py  test_router_agent.py
backend/tests/agents/knowledge_agent/: test_main.py  test_scraping.py
backend/tests/api/v1/: __init__.py  test_chat_api.py
backend/tests/core/: test_llm.py  test_model_configuration.py  test_settings.py
backend/tests/services/: test_llm_client.py  test_redis_service.py
frontend/: Dockerfile  README.md  index.html  start.sh
frontend/src/: App.jsx
frontend/src/components/: ChatInterface.jsx  MessageList.jsx
frontend/src/utils/: storage.js
k8s/: README.md  cleanup.sh  configmap.yaml  deploy.sh  health-check.sh
k8s/backend/: deployment.yaml  index-builder-job.yaml  pvc.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
